<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="14sp"
        android:paddingBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/etSubstring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_company_name"
        android:inputType="text" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete" />

    <Button
        android:id="@+id/btnAnalysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_analysis" />

</LinearLayout>
